--- a/Ubuntu/Dockerfile
+++ b/Ubuntu/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu:22.04
 
 ARG TOOLS_PATH=/opt/gcc-arm-none-eabi
+ARG ARM_VERSION=12.2.rel1
 
 # Prep basic packages
 RUN apt update && apt-get clean && apt-get install -y \
@@ -14,8 +15,7 @@ RUN apt update && apt-get clean && apt-get install -y \
 				
 # Get ARM Toolchain
 RUN mkdir ${TOOLS_PATH} \
-	&& ARM_TOOLCHAIN_VERSION=$(curl -s https://developer.arm.com/downloads/-/arm-gnu-toolchain-downloads | grep -Po '<h4>Version \K.+(?=</h4>)') \
-	&& curl -Lo gcc-arm-none-eabi.tar.xz "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_TOOLCHAIN_VERSION}/binrel/arm-gnu-toolchain-${ARM_TOOLCHAIN_VERSION}-x86_64-arm-none-eabi.tar.xz" \
+	&& curl -Lo gcc-arm-none-eabi.tar.xz "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-x86_64-arm-none-eabi.tar.xz" \
 	&& tar xf gcc-arm-none-eabi.tar.xz --strip-components=1 -C ${TOOLS_PATH}
 
 # Clean Up
