--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -19,13 +19,13 @@ jobs:
         with:
           context: .
           tags: stm32_ubuntu:latest
-          outputs: type=docker,dest=/tmp/stm32_ubuntu.tar
+          outputs: type=docker,dest=/Ubuntu/stm32_ubuntu.tar
       -
         name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: stm32_ubuntu
-          path: /tmp/stm32_ubuntu.tar
+          path: /Ubuntu/stm32_ubuntu.tar
 
   use:
     runs-on: ubuntu-latest
@@ -39,9 +39,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: stm32_ubuntu
-          path: /tmp
+          path: /Ubuntu
       -
         name: Load image
         run: |
-          docker load --input /tmp/myimage.tar
+          docker load --input /Ubuntu/stm32_ubuntu.tar
           docker image ls -a
