--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -4,44 +4,17 @@ on:
       - "main"
 
 jobs:
-  build:
+  build_and_upload:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Build and export
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          tags: stm32_ubuntu:latest
-          outputs: type=docker,dest=/Ubuntu/stm32_ubuntu.tar
-      -
-        name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: stm32_ubuntu
-          path: /Ubuntu/stm32_ubuntu.tar
+    - name: Checkout project
+      uses: actions/checkout@v2
+      
+    - name: Build image
+      run: |
+        docker build -t stm32_ubuntu:latest
 
-  use:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: stm32_ubuntu
-          path: /Ubuntu
-      -
-        name: Load image
-        run: |
-          docker load --input /Ubuntu/stm32_ubuntu.tar
-          docker image ls -a
+    - name: Upload image
+      uses: ishworkh/docker-image-artifact-upload@v1
+      with:
+        image: "stm32_ubuntu:latest"
