--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -12,7 +12,7 @@ jobs:
       
     - name: Build image
       run: |
-        docker build -t stm32_ubuntu:latest
+        docker build -t stm32_ubuntu:latest Ubuntu/.
 
     - name: Upload image
       uses: ishworkh/docker-image-artifact-upload@v1
