Edit: action steps format seperated

--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -10,13 +10,20 @@ jobs:
     - name: Checkout project
       uses: actions/checkout@v2
       
-    - name: Build image
+    - name: Build Ubuntu
       run: |
         docker build -t stm32_ubuntu:latest Ubuntu/.
+
+    - name: Build Alpine
+      run: |
         docker build -t stm32_alpine:latest Alpine/.
 
-    - name: Upload image
+    - name: Upload Ubuntu
       uses: ishworkh/docker-image-artifact-upload@v1
       with:
         image: "stm32_ubuntu:latest"
+
+    - name: Upload Alpine
+      uses: ishworkh/docker-image-artifact-upload@v1
+      with:
         image: "stm32_alpine:latest"
