--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,9 @@
 				"build",
 				"-t",
 				"jasonyangee/stm32_ubuntu:latest",
-				"Ubuntu/."
+				"-f",
+				"Dockerfile.ubuntu",
+				"."
 			],
 			"options": {
 				"cwd": "${workspaceFolder}"
@@ -24,7 +26,9 @@
 				"build",
 				"-t",
 				"jasonyangee/stm32_alpine:latest",
-				"Alpine/."
+				"-f",
+				"Dockerfile.alpine",
+				"."
 			],
 			"options": {
 				"cwd": "${workspaceFolder}"
