--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -10,7 +10,7 @@ RUN apt update && apt-get clean && apt-get install -y \
 	git \
 	stlink-tools \
 	xz-utils curl
-				
+
 # Get ARM Toolchain
 RUN mkdir ${TOOLS_PATH} \
 	&& curl -Lo gcc-arm-none-eabi.tar.xz "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-x86_64-arm-none-eabi.tar.xz" \
@@ -26,4 +26,4 @@ RUN rm gcc-arm-none-eabi.tar.xz \
 ENV PATH="$PATH:${TOOLS_PATH}/bin"
 
 ADD build.sh /usr/local/bin/build.sh
-ENTRYPOINT ["bin/bash", "build.sh"]
+ENTRYPOINT ["/bin/bash", "build.sh"]
