--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -4,16 +4,33 @@ on:
       - "*"
 
 jobs:
-  build_and_upload:
+  Build_Upload:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout project
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       
-    - name: Build Ubuntu
-      run: |
-        docker build -t stm32_ubuntu:latest Ubuntu/.
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build Alpine
-      run: |
-        docker build -t stm32_alpine:latest Alpine/.
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Build Push for Ubuntu
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./Dockerfile.ubuntu
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu:latest
+
+    - name: Build Push for Alpine
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./Dockerfile.alpine
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine:latest
