--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
 			"args": [
 				"build",
 				"-t",
-				"jasonyangee/stm32_ubuntu:latest",
+				"stm32_ubuntu:latest",
 				"-f",
 				"Dockerfile.ubuntu",
 				"."
@@ -25,7 +25,7 @@
 			"args": [
 				"build",
 				"-t",
-				"jasonyangee/stm32_alpine:latest",
+				"stm32_alpine:latest",
 				"-f",
 				"Dockerfile.alpine",
 				"."
