Add: action name

--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -1,7 +1,11 @@
+name: 'Build and Push to Docker Hub'
+
 on:
   push:
+    branches:
+      - 'main'
     tags:
-      - "*"
+      - '*'
 
 jobs:
   Build_Upload:
