Add: taging auto update and readme badge

--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -2,8 +2,8 @@ name: 'Build and Push to Docker Hub'
 
 on:
   push:
-    branches:
-      - 'main'
+    tags:
+      - '*'
 
 jobs:
   Build_Upload:
@@ -27,7 +27,9 @@ jobs:
         context: .
         file: ./Dockerfile.ubuntu
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu:latest
+        tags: |
+              ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu:$GITHUB_REF_NAME
+              ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu:latest
 
     - name: Build Push for Alpine
       uses: docker/build-push-action@v4
@@ -35,4 +37,6 @@ jobs:
         context: .
         file: ./Dockerfile.alpine
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine:latest
+        tags: |
+              ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine:$GITHUB_REF_NAME
+              ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine:$latest
