--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -21,7 +21,7 @@ jobs:
         images: |
           jasonyangee/stm32_ubuntu
         tags: |
-          type=refs,event=tag
+          type=ref,event=tag
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
