--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -13,11 +13,20 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Docker meta
-      id: meta
+      id: meta-ubuntu
       uses: docker/metadata-action@v4
       with:
         images: |
-          jasonyangee/stm32_ubuntu
+          ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu
+        tags: |
+          type=ref,event=tag
+
+    - name: Docker meta
+      id: meta-alpine
+      uses: docker/metadata-action@v4
+      with:
+        images: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine
         tags: |
           type=ref,event=tag
 
@@ -27,9 +36,6 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # - name: Set up Docker Buildx
-    #   uses: docker/setup-buildx-action@v2
-
     - name: Build Push for Ubuntu
       uses: docker/build-push-action@v4
       with:
@@ -37,4 +43,13 @@ jobs:
         file: ./Dockerfile.ubuntu
         push: true
         tags: |
-              ${{ steps.meta.outputs.tags }}
+              ${{ steps.meta-ubuntu.outputs.tags }}
+
+    - name: Build Push for Alpine
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./Dockerfile.alpine
+        push: true
+        tags: |
+              ${{ steps.meta-alpine.outputs.tags }}
