--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,42 @@
-name: 'Build'
+name: 'Build and Push'
 
 on:
   push:
-    branches:
-      - 'main'
+    tags:
+      - '*'
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   Build_Upload:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
     - name: Checkout project
       uses: actions/checkout@v3
       
-    - name: Docker meta
+    - name: Docker meta ubuntu
       id: meta-ubuntu
       uses: docker/metadata-action@v4
       with:
         images: |
           ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu
+          ${{ env.REGISTRY }}/stm32_ubuntu
         tags: |
           type=ref,event=tag
 
-    - name: Docker meta
+    - name: Docker meta alpine
       id: meta-alpine
       uses: docker/metadata-action@v4
       with:
         images: |
           ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine
+          ${{ env.REGISTRY }}/ /stm32_alpine
         tags: |
           type=ref,event=tag
 
@@ -36,6 +46,13 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+    - name: Log in to Github Container Registry
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.USER_GITHUB_PERSONAL }}
+        password: ${{ secrets.TOKEN_GITHUB_PERSONAL }}
+
     - name: Build Push for Ubuntu
       uses: docker/build-push-action@v4
       with:
@@ -44,6 +61,7 @@ jobs:
         push: false
         tags: ${{ steps.meta-ubuntu.outputs.tags }}
         labels: ${{ steps.meta-ubuntu.outputs.labels }}
+
 
     - name: Build Push for Alpine
       uses: docker/build-push-action@v4
