--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,12 @@
-name: 'Build and Push'
+name: 'Build'
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - 'main'
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   Build_Upload:
@@ -26,7 +25,6 @@ jobs:
       with:
         images: |
           ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu
-          ${{ env.REGISTRY }}/stm32_ubuntu
         tags: |
           type=ref,event=tag
 
@@ -36,22 +34,8 @@ jobs:
       with:
         images: |
           ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine
-          ${{ env.REGISTRY }}/ /stm32_alpine
         tags: |
           type=ref,event=tag
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Log in to Github Container Registry
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ secrets.USER_GITHUB_PERSONAL }}
-        password: ${{ secrets.TOKEN_GITHUB_PERSONAL }}
 
     - name: Build Push for Ubuntu
       uses: docker/build-push-action@v4
@@ -61,7 +45,6 @@ jobs:
         push: false
         tags: ${{ steps.meta-ubuntu.outputs.tags }}
         labels: ${{ steps.meta-ubuntu.outputs.labels }}
-
 
     - name: Build Push for Alpine
       uses: docker/build-push-action@v4
