--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,4 @@
-name: 'Build and Push'
+name: 'Push'
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
       with:
         images: |
           ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu
-          ${{ env.REGISTRY }}/stm32_ubuntu
+          ${{ env.REGISTRY }}/${{ secrets.USER_GITHUB_PERSONAL }}/stm32_ubuntu
         tags: |
           type=ref,event=tag
 
@@ -36,7 +36,7 @@ jobs:
       with:
         images: |
           ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine
-          ${{ env.REGISTRY }}/ /stm32_alpine
+          ${{ env.REGISTRY }}/${{ secrets.USER_GITHUB_PERSONAL }}/stm32_alpine
         tags: |
           type=ref,event=tag
 
