--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,4 +60,4 @@ jobs:
 
     - name: Test
       run: |
-        docker run ${{ output-ubuntu.imageid:latest }} ${{ env.TEST_REPO }}
+        docker run ${{ steps.output-ubuntu.imageid:latest }} ${{ env.TEST_REPO }}
