--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,4 +62,4 @@ jobs:
 
     - name: Test
       run: |
-        docker run ${{ steps.output-ubuntu.imageid:latest }} ${{ env.TEST_REPO }}
+        docker run ${{ imageid }} ${{ env.TEST_REPO }}
