--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,51 +19,35 @@ jobs:
     steps:
     - name: Checkout project
       uses: actions/checkout@v3
-      
-    - name: Docker meta ubuntu
-      id: meta-ubuntu
-      uses: docker/metadata-action@v4
-      with:
-        images: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu
-        tags: |
-          type=ref,event=branch
+        with:
+          path: main
 
-    - name: Docker meta alpine
-      id: meta-alpine
+    - name: Checkout tools repo
+      uses: actions/checkout@v3
+        with:
+          repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
+            path: project
+      
+    - name: Docker meta
+      id: meta
       uses: docker/metadata-action@v4
       with:
-        images: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine
-        tags: |
-          type=ref,event=branch
+        images: ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu
+        tags: type=ref,event=branch
 
     - name: Build and Load for Ubuntu
-      id: output-ubuntu
+      id: result
       uses: docker/build-push-action@v4
       with:
         context: .
-        file: ./Dockerfile.ubuntu
+        file: main/Dockerfile.ubuntu
         push: false
         load: true
-        tags: ${{ steps.meta-ubuntu.outputs.tags }}
-        labels: ${{ steps.meta-ubuntu.outputs.labels }}
-
-    - name: Build and Load for Alpine
-      id: output-alpine
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        file: ./Dockerfile.alpine
-        push: false
-        load: true
-        tags: ${{ steps.meta-alpine.outputs.tags }}
-        labels: ${{ steps.meta-alpine.outputs.labels }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
 
     - name: Test Ubuntu
-      run: |
-        docker run ${{ steps.output-ubuntu.outputs.imageid }} ${{ env.TEST_REPO }}
-
-    - name: Test Alpine
-      run: |
-        docker run ${{ steps.output-alpine.outputs.imageid }} ${{ env.TEST_REPO }}
+      run: docker run ${{ steps.result.outputs.imageid }} ${{ env.TEST_REPO }}
+      
+    - name: Test Ubuntu
+      run: docker run -v "/project":"/build" ${{ steps.result.outputs.imageid }}
