--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,12 +19,15 @@ jobs:
     steps:
     - name: Checkout project
       uses: actions/checkout@v3
+      with:
+        repository: ${{ github.repository }}
+        path: 'main'
 
     - name: Checkout example repo
       uses: actions/checkout@v3
-        with:
-          repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
-          path: 'project'
+      with:
+        repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
+        path: 'project'
       
     - name: Docker meta
       id: meta
