--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,26 +26,49 @@ jobs:
         repository: jasonyang-ee/STM32-CMAKE-TEMPLATE
         path: project
       
-    - name: Docker meta
-      id: meta
+    - name: Docker meta ubuntu
+      id: meta-ubuntu
       uses: docker/metadata-action@v4
       with:
         images: ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu
         tags: type=ref,event=branch
 
+    - name: Docker meta alpine
+      id: meta-alpine
+      uses: docker/metadata-action@v4
+      with:
+        images: ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine
+        tags: type=ref,event=branch
+
     - name: Build and Load for Ubuntu
-      id: result
+      id: output-ubuntu
       uses: docker/build-push-action@v4
       with:
         context: .
         file: ${{ github.workspace }}/Dockerfile.ubuntu
         push: false
         load: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+        tags: ${{ steps.meta-ubuntu.outputs.tags }}
+        labels: ${{ steps.meta-ubuntu.outputs.labels }}
 
-    - name: Test Ubuntu
-      run: docker run ${{ steps.result.outputs.imageid }} ${{ env.TEST_REPO }}
+    - name: Build and Load for Alpine
+      id: output-alpine
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ${{ github.workspace }}/Dockerfile.alpine
+        push: false
+        load: true
+        tags: ${{ steps.meta-alpine.outputs.tags }}
+        labels: ${{ steps.meta-alpine.outputs.labels }}
 
-    - name: Test Ubuntu
+    - name: Test Ubuntu Native
+      run: |
+        docker run ${{ steps.output-ubuntu.outputs.imageid }} ${{ env.TEST_REPO }}
+
+    - name: Test Alpine Native
+      run: |
+        docker run ${{ steps.output-alpine.outputs.imageid }} ${{ env.TEST_REPO }}
+
+    - name: Test Ubuntu Volume
       run: docker run -v "${{ github.workspace }}/project":"/build" ${{ steps.result.outputs.imageid }}
