--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,15 +20,23 @@ jobs:
     - name: Checkout project
       uses: actions/checkout@v3
       
-    - name: Docker meta
-      id: meta
+    - name: Docker meta ubuntu
+      id: meta-ubuntu
       uses: docker/metadata-action@v4
       with:
         images: |
           ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu
           ${{ env.REGISTRY }}/${{ secrets.USER_GITHUB_PERSONAL }}/stm32_ubuntu
-        tags: |
-          type=ref,event=tag
+        tags: type=ref,event=tag
+
+    - name: Docker meta alpine
+      id: meta-alpine
+      uses: docker/metadata-action@v4
+      with:
+        images: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine
+          ${{ env.REGISTRY }}/${{ secrets.USER_GITHUB_PERSONAL }}/stm32_alpine
+        tags: type=ref,event=tag
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -43,11 +51,22 @@ jobs:
         username: ${{ secrets.USER_GITHUB_PERSONAL }}
         password: ${{ secrets.TOKEN_GITHUB_PERSONAL }}
 
-    - name: Build and Push for Ubuntu
+    - name: Build and Load for Ubuntu
+      id: output-ubuntu
       uses: docker/build-push-action@v4
       with:
         context: .
-        file: ./Dockerfile.ubuntu
+        file: ${{ github.workspace }}/Dockerfile.ubuntu
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+        tags: ${{ steps.meta-ubuntu.outputs.tags }}
+        labels: ${{ steps.meta-ubuntu.outputs.labels }}
+
+    - name: Build and Load for Alpine
+      id: output-alpine
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ${{ github.workspace }}/Dockerfile.alpine
+        push: true
+        tags: ${{ steps.meta-alpine.outputs.tags }}
+        labels: ${{ steps.meta-alpine.outputs.labels }}
