--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         images: |
           ${{ secrets.DOCKERHUB_USERNAME }}/stm32_ubuntu
-          ${{ vars.REGISTRY }}/${{ secrets.USER_GITHUB_PERSONAL }}/stm32_ubuntu
+          ${{ vars.REGISTRY }}/stm32_ubuntu
         tags: type=ref,event=tag
 
     - name: Docker meta alpine
@@ -31,7 +31,7 @@ jobs:
       with:
         images: |
           ${{ secrets.DOCKERHUB_USERNAME }}/stm32_alpine
-          ${{ vars.REGISTRY }}/${{ secrets.USER_GITHUB_PERSONAL }}/stm32_alpine
+          ${{ vars.REGISTRY }}/stm32_alpine
         tags: type=ref,event=tag
 
     - name: Login to Docker Hub
