--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,21 +65,17 @@ jobs:
     - name: Test Ubuntu URL
       run: |
         docker run ${{ steps.output-ubuntu.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-
-    - name: Test Ubuntu URL Debug
-      run: |
         docker run ${{ steps.output-ubuntu.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
 
     - name: Test Alpine URL
       run: |
         docker run ${{ steps.output-alpine.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-
-    - name: Test Alpine URL Debug
-      run: |
         docker run ${{ steps.output-alpine.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
 
     - name: Test Ubuntu Volume
-      run: docker run -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-ubuntu.outputs.imageid }} /proj
+      run: |
+        docker run -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-ubuntu.outputs.imageid }} /proj
+        rm -r ${{ github.workspace }}/project/build
 
     - name: Test Alpine Volume
-      run: docker run -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-alpine.outputs.imageid }} /proj
+      run: docker run -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-alpine.outputs.imageid }} /proj Debug
