--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,9 +81,7 @@ jobs:
       run: docker run -v "${{ github.workspace }}/project":"/proj" ${{ steps.output-alpine.outputs.imageid }} /proj Debug
       
     - name: Test Ubuntu Hybrid
-      run: |
-        docker run -v "${{ github.workspace }}/project":"/home" ${{ steps.output-ubuntu.outputs.imageid }} ${{ env.TEST_REPO_URL }}
-        sudo rm -r ${{ github.workspace }}/project/build
+      run: docker run -v "${{ github.workspace }}/hybrid1":"/home" ${{ steps.output-ubuntu.outputs.imageid }} ${{ env.TEST_REPO_URL }}
 
     - name: Test Alpine Hybrid
-      run: docker run -v "${{ github.workspace }}/project":"/home" ${{ steps.output-alpine.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
+      run: docker run -v "${{ github.workspace }}/hybrid2":"/home" ${{ steps.output-alpine.outputs.imageid }} ${{ env.TEST_REPO_URL }} Debug
