--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,12 @@ jobs:
         tags: ${{ steps.meta-alpine.outputs.tags }}
         labels: ${{ steps.meta-alpine.outputs.labels }}
 
+    - name: Test Default
+      run: docker run ${{ steps.output-ubuntu.outputs.imageid }}
+
+    - name: Test --help
+      run: docker run ${{ steps.output-ubuntu.outputs.imageid }} --help
+
     - name: Test Ubuntu URL
       run: |
         docker run ${{ steps.output-ubuntu.outputs.imageid }} ${{ env.TEST_REPO_URL }}
