--- a/Dockerfile.arch
+++ b/Dockerfile.arch
@@ -8,7 +8,8 @@ RUN pacman -Syy
 
 RUN yes | pacman -Syu
 
-RUN yes | pacman -S \
+RUN yes | pacman -Sy \
+	base-devel \
 	make cmake ninja \
 	git \
 	stlink
@@ -16,12 +17,14 @@ RUN yes | pacman -S \
 # Get ARM Toolchain
 RUN mkdir ${TOOLS_PATH} \
 	&& curl -Lo gcc-arm-none-eabi.tar.xz "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-x86_64-arm-none-eabi.tar.xz" \
-	&& tar xf gcc-arm-none-eabi.tar.xz --strip-components=1 -C ${TOOLS_PATH}
-
-# Clean Up
-RUN rm gcc-arm-none-eabi.tar.xz \
+	&& tar xf gcc-arm-none-eabi.tar.xz --strip-components=1 -C ${TOOLS_PATH} \
+	&& rm gcc-arm-none-eabi.tar.xz \
 	&& rm ${TOOLS_PATH}/*.txt \
 	&& rm -rf ${TOOLS_PATH}/share/doc
+
+# Get static analysis tools: clang-format clang-tidy, Lizard, cpplint
+RUN yes | pacman -Sy clang python-pip \
+	&& pip install lizard
 
 # Add Toolchain to PATH
 ENV PATH="$PATH:${TOOLS_PATH}/bin"
