Add: multiplatform support

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -65,6 +65,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
+        platforms: linux/amd64,linux/arm64, linux/riscv64, linux/arm/v7, linux/arm/v6
         file: ${{ github.workspace }}/Dockerfile.ubuntu
         push: true
         tags: ${{ steps.meta-ubuntu.outputs.tags }}
@@ -75,6 +76,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
+        platforms: linux/amd64,linux/arm64, linux/riscv64, linux/arm/v7, linux/arm/v6
         file: ${{ github.workspace }}/Dockerfile.alpine
         push: true
         tags: ${{ steps.meta-alpine.outputs.tags }}
@@ -85,6 +87,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
+        platforms: linux/amd64,linux/arm64, linux/riscv64, linux/arm/v7, linux/arm/v6
         file: ${{ github.workspace }}/Dockerfile.arch
         push: true
         tags: ${{ steps.meta-arch.outputs.tags }}
