--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,15 +2,8 @@ name: 'Upload'
 
 on:
   push:
-    branches:
-      - "*"
-    paths-ignore:
-      - '**.md'
-  pull_request:
-    branches:
-      - main
-    paths-ignore:
-      - '**.md'
+    tags:
+      - '*'
 
 jobs:
   Build_Upload:
@@ -72,7 +65,6 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        platforms: linux/amd64,linux/arm64, linux/riscv64, linux/arm/v7, linux/arm/v6
         file: ${{ github.workspace }}/Dockerfile.ubuntu
         push: true
         tags: ${{ steps.meta-ubuntu.outputs.tags }}
@@ -83,7 +75,6 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        platforms: linux/amd64,linux/arm64, linux/riscv64, linux/arm/v7, linux/arm/v6
         file: ${{ github.workspace }}/Dockerfile.alpine
         push: true
         tags: ${{ steps.meta-alpine.outputs.tags }}
@@ -94,7 +85,6 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        platforms: linux/amd64,linux/arm64, linux/riscv64, linux/arm/v7, linux/arm/v6
         file: ${{ github.workspace }}/Dockerfile.arch
         push: true
         tags: ${{ steps.meta-arch.outputs.tags }}
