--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,6 +15,12 @@ jobs:
     steps:
     - name: Checkout project
       uses: actions/checkout@v3
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
       
     - name: Docker meta ubuntu
       id: meta-ubuntu
@@ -65,7 +71,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        platforms: linux/amd64,linux/arm64, linux/riscv64, linux/arm/v7, linux/arm/v6
+        platforms: linux/amd64,linux/arm64,linux/riscv64,linux/arm/v7,linux/arm/v6
         file: ${{ github.workspace }}/Dockerfile.ubuntu
         push: true
         tags: ${{ steps.meta-ubuntu.outputs.tags }}
@@ -76,7 +82,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        platforms: linux/amd64,linux/arm64, linux/riscv64, linux/arm/v7, linux/arm/v6
+        platforms: linux/amd64,linux/arm64,linux/riscv64,linux/arm/v7,linux/arm/v6
         file: ${{ github.workspace }}/Dockerfile.alpine
         push: true
         tags: ${{ steps.meta-alpine.outputs.tags }}
@@ -87,7 +93,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        platforms: linux/amd64,linux/arm64, linux/riscv64, linux/arm/v7, linux/arm/v6
+        platforms: linux/amd64,linux/arm64,linux/riscv64,linux/arm/v7,linux/arm/v6
         file: ${{ github.workspace }}/Dockerfile.arch
         push: true
         tags: ${{ steps.meta-arch.outputs.tags }}
