Fix: match platform to each official image

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -71,7 +71,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        platforms: linux/amd64,linux/arm64,linux/riscv64,linux/arm/v7,linux/arm/v6
+        platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
         file: ${{ github.workspace }}/Dockerfile.ubuntu
         push: true
         tags: ${{ steps.meta-ubuntu.outputs.tags }}
@@ -82,7 +82,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        platforms: linux/amd64,linux/arm64,linux/riscv64,linux/arm/v7,linux/arm/v6
+        platforms: linux/amd64,linux/arm64/v8,linux/arm/v7,linux/arm/v6
         file: ${{ github.workspace }}/Dockerfile.alpine
         push: true
         tags: ${{ steps.meta-alpine.outputs.tags }}
@@ -93,7 +93,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        platforms: linux/amd64,linux/arm64,linux/riscv64,linux/arm/v7,linux/arm/v6
+        platforms: linux/amd64
         file: ${{ github.workspace }}/Dockerfile.arch
         push: true
         tags: ${{ steps.meta-arch.outputs.tags }}
