Fix: arm toolchain must be downloaded by arch

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,7 +1,9 @@
 FROM alpine:3.17.2
 
+ARG TARGETPLATFORM
 ARG TOOLS_PATH=/opt/gcc-arm-none-eabi
 ARG ARM_VERSION=12.2.rel1
+ARG ARM_ARCH
 
 # Prep basic packages to build STM32 CMake project
 RUN apk --no-cache add \
@@ -11,9 +13,16 @@ RUN apk --no-cache add \
 	stlink \
 	bash curl
 
+RUN if [ $TARGETPLATFORM="linux/arm64/v8" ]; then ARM_ARCH="aarch64"; \
+    elif [ $TARGETPLATFORM="linux/arm/v7" ]; then ARM_ARCH="aarch64"; \
+    elif [ $TARGETPLATFORM="linux/arm/v6" ]; then ARM_ARCH="aarch64"; \
+    elif [ $TARGETPLATFORM="linux/amd64" ]; then ARM_ARCH="x86_64"; \
+    else ARM_ARCH="x86_64"; \
+    fi
+
 # Get ARM Toolchain
 RUN mkdir ${TOOLS_PATH} \
-	&& curl -Lo gcc-arm-none-eabi.tar.xz "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-x86_64-arm-none-eabi.tar.xz" \
+	&& curl -Lo gcc-arm-none-eabi.tar.xz "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-${ARM_ARCH}-arm-none-eabi.tar.xz" \
 	&& tar xf gcc-arm-none-eabi.tar.xz --strip-components=1 -C ${TOOLS_PATH} \
 	&& rm gcc-arm-none-eabi.tar.xz \
 	&& rm ${TOOLS_PATH}/*.txt \
