--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,7 +1,9 @@
 FROM ubuntu:22.04
 
+ARG TARGETPLATFORM
 ARG TOOLS_PATH=/opt/gcc-arm-none-eabi
 ARG ARM_VERSION=12.2.rel1
+ARG ARM_ARCH
 
 # Prep basic packages to build STM32 CMake project
 RUN apt-get update && apt-get install -y \
@@ -9,11 +11,17 @@ RUN apt-get update && apt-get install -y \
 	cmake ninja-build \
 	git \
 	stlink-tools \
-	xz-utils curl	
+	xz-utils curl
+
+RUN if [ $TARGETPLATFORM="linux/arm64/v8" ]; then ARM_ARCH="aarch64"; \
+    elif [ $TARGETPLATFORM="linux/arm/v7" ]; then ARM_ARCH="aarch64"; \
+    elif [ $TARGETPLATFORM="linux/amd64" ]; then ARM_ARCH="x86_64"; \
+    else ARM_ARCH="x86_64"; \
+    fi
 
 # Get ARM Toolchain
 RUN mkdir ${TOOLS_PATH} \
-	&& curl -Lo gcc-arm-none-eabi.tar.xz "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-x86_64-arm-none-eabi.tar.xz" \
+	&& curl -Lo gcc-arm-none-eabi.tar.xz "https://developer.arm.com/-/media/Files/downloads/gnu/${ARM_VERSION}/binrel/arm-gnu-toolchain-${ARM_VERSION}-${ARM_ARCH}-arm-none-eabi.tar.xz" \
 	&& tar xf gcc-arm-none-eabi.tar.xz --strip-components=1 -C ${TOOLS_PATH} \
 	&& rm gcc-arm-none-eabi.tar.xz \
 	&& rm ${TOOLS_PATH}/*.txt \
